<resources>
    <string name="app_name">Nmedia</string>
    <string name="author" translatable="false">Нетология. Университет интернет-профессий будущего.</string>
    <string name="published" translatable="false">21 мая в 19:36</string>
    <string name="content" translatable="false">Привет! Это новая Нетология! Когда-то Нетология начиналась с интенсивов по онлайн-маркетингу. Затем появились курсы по дизайну, разработке, аналитике и управлению. Мы растём сами и помогаем расти студентам: от новичков до увереннных профессионалов. Но самое важное остаётся с нами: мы верим, что в каждом уже есть сила, которая заставляет хотеть больше,бежать быстрее. Наша миссия - помочь встать на путь роста и начать цепочку перемен - http://netolo.gy/fyb </string>
    <string name="likes" translatable="false">10</string>
    <string name="shares" translatable="false">0</string>
    <string name="reviews" translatable="false">0</string>
    <string name="menu_remove" translatable="false">Remove</string>
    <string name="post_text" translatable="false">Post Text</string>
    <string name="menu_edit" translatable="false">Edit</string>
    <string name="menu_save" translatable="false" >Save</string>
    <string name="clear" translatable="false" >Clear </string>
    <string name="logout" translatable="false" >Logout </string>
    <string name="sing_in" translatable="false" >Sing in </string>
    <string name="sing_up" translatable="false" >Sing up </string>
    <string name="menu_edit_additional" translatable="false">Edit Message</string>
    <string name="description_post_save" translatable="false">Сохранить</string>
    <string name="full_screen_image" translatable="false" >Full screen image </string>
    <string name="error_empty_content" translatable="false">Content can\'t be empty</string>
    <string name="chooser_share_post" translatable="false">Share post</string>
    <string name="add_post" translatable="false">Add post</string>
    <string name="empty_posts" translatable="false">There are no posts.\nIf you create a new post, it will appear here</string>
    <string name="error_loading" translatable="false">Something went wrong. Try again later</string>
    <string name="retry_loading" translatable="false">Retry</string>
    <string name="buttonNew" translatable="false">Latest news</string>
    <string name ="post_error" translatable="false">Oops! Your try was failed</string>
    <string name="ad_description" translatable="false">ad</string>
    <string name ="response_error" translatable="false">Response body is empty</string>
    <string name="notification_user_new_post" translatable="false">User %1$s published new post</string>
    <string name="google_play_unavailable" translatable="false">Google Api Unavailable</string>
    <string name="channel_remote_name" translatable="false">Server notifications</string>
    <string name="channel_remote_description" translatable="false">Notifications from remote


        server</string>
    <string name="save" translatable="false">Save</string>
    <string name="notification_user_liked" translatable="false">User %1$s liked %2$s\'s
        post</string>

</resources>